--- a/test-app/app/globals.css
+++ b/test-app/app/globals.css
@@ -17,11 +17,13 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: #303030;
+  background-color: white;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    color: #d4d4d4;
+    background-color: #151515;
+  }  
 }
